force-app/main/default/objects/PC_Availability__c/PC_Availability__c.object-meta.xml
<CustomObject>
    <description>Object to display when a Specialist is available</description>
    <label>PrC Availability</label>
    <nameField>
        <displayFormat>PCAV-{0000000000}</displayFormat>
        <label>PC Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PrC Availability</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>