force-app/main/default/objects/PC_Availability__c/fields/Available_Rolling_Sum__c.field-meta.xml
<CustomField>
    <fullName>Available_Rolling_Sum__c</fullName>
    <label>Available Rolling Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>