force-app/main/default/objects/PC_Availability__c/fields/Average_Number_of_Specialists_on_Wrap_Up__c.field-meta.xml
<CustomField>
    <fullName>Average_Number_of_Specialists_on_Wrap_Up__c</fullName>
    <formula>Wrap_Up_Rolling_Sum__c / Total_Snapshots_this_Hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Number of Specialists on Wrap Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>