force-app/main/default/objects/PC_Availability__c/fields/Average_Percentage_of_Capacity_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Average_Percentage_of_Capacity_Utilized__c</fullName>
    <formula
    >IF(ISNULL(Total_Snapshots_this_Hour__c) || Total_Snapshots_this_Hour__c = 0 || (Online_Rolling_Sum__c * 20 / Total_Snapshots_this_Hour__c ) = 0,0,(Capacity_Rolling_Sum__c
        / Total_Snapshots_this_Hour__c ) / (Online_Rolling_Sum__c * 20 / Total_Snapshots_this_Hour__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Percentage of Capacity Utilized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>