force-app/main/default/objects/PC_Availability__c/fields/Average_Users_Available_for_Phone__c.field-meta.xml
<CustomField>
    <fullName>Average_Users_Available_for_Phone__c</fullName>
    <formula>Phone_Rolling_Sum__c / Total_Snapshots_this_Hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Users Available for Phone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>