force-app/main/default/objects/PC_Availability__c/fields/Chat_Rolling_Sum__c.field-meta.xml
<CustomField>
    <fullName>Chat_Rolling_Sum__c</fullName>
    <label>Chat Rolling Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>