force-app/main/default/objects/PC_Availability__c/fields/Medical_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Medical_Specialty__c</fullName>
    <label>Medical Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PC_Specialties</valueSetName>
    </valueSet>
</CustomField>