force-app/main/default/objects/PC_Availability__c/fields/No_Specialists_Online__c.field-meta.xml
<CustomField>
    <fullName>No_Specialists_Online__c</fullName>
    <formula>IF( Online_Rolling_Sum__c = 0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Specialists Online for Hour</label>
    <type>Checkbox</type>
</CustomField>