force-app/main/default/objects/PC_Availability__c/fields/No_Teams_Video_Coverage_for_Hour__c.field-meta.xml
<CustomField>
    <fullName>No_Teams_Video_Coverage_for_Hour__c</fullName>
    <formula>IF( Teams_Rolling_Sum__c = 0, TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Teams Video Coverage for Hour</label>
    <type>Checkbox</type>
</CustomField>