force-app/main/default/objects/PC_Availability__c/fields/Percentage_Teams_Video_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Teams_Video_Coverage__c</fullName>
    <formula>IF( Online_Rolling_Sum__c = 0,0,(( Teams_Rolling_Sum__c / Total_Snapshots_this_Hour__c ) / (Online_Rolling_Sum__c / Total_Snapshots_this_Hour__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Teams Video Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>