force-app/main/default/objects/PC_Availability__c/fields/Phone_Rolling_Sum__c.field-meta.xml
<CustomField>
    <fullName>Phone_Rolling_Sum__c</fullName>
    <label>Phone Rolling Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>