force-app/main/default/objects/PC_Availability__c/fields/Record_Final__c.field-meta.xml
<CustomField>
    <fullName>Record_Final__c</fullName>
    <formula>IF(HOUR(TIMEVALUE(NOW())) &gt;= HOUR(TIMEVALUE( PC_Snapshot_Date_Time__c )) + 1,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Final</label>
    <type>Checkbox</type>
</CustomField>