force-app/main/default/objects/PC_Availability__c/fields/Wrap_Up_Rolling_Sum__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Up_Rolling_Sum__c</fullName>
    <label>Wrap-Up Rolling Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>